# incident-lens

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6eac3c37eb81_create_incident_analysis_table.py  c3a740c4cc5c_create_incidents_and_incident_logs_.py
docs/: architecture.md
incident_lens/: analyzer.py  api.py  database.py  jobs.py  logging_config.py  main.py  metrics.py  models.py  queue.py
tests/: conftest.py  test_analysis.py  test_incidents.py  test_metrics.py
