[project]
name = "incident-lens"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Leonardo C.",email = "leonardorudolfocardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "pyrefly (>=0.55.0,<0.56.0)",
    "pytest-watcher (>=0.6.3,<0.7.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
